PQ-67354: Working to for Capsule plugin to work with Gradle 5+

--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,9 @@ buildscript {
 }
 
 plugins {
-    id 'com.proquest.codegen.CodeGenPlugin' version '1.11.21'
-    id("com.proquest.gradle.NexusPublishPlugin") version "1.11.21"
-    id("com.proquest.gradle.IvyPublishPlugin") version "1.11.21"
+    id('com.proquest.codegen.CodeGenPlugin')
+    id("com.proquest.gradle.NexusPublishPlugin")
+    id("com.proquest.gradle.IvyPublishPlugin")
 }
 
 allprojects {
@@ -29,7 +29,7 @@ subprojects {
     [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
     group               = "co.paralleluniverse"
-    version             = "1.0.4-SNAPSHOT"
+    version             = "1.0.4-PQ"
     status              = "integration"
     description         = "Simple Java deployment"
     ext.url             = "https://github.com/puniverse/capsule"
@@ -49,10 +49,6 @@ subprojects {
     }
 
     configurations {
-        javancss
-    }
-
-    configurations {
         [compile, runtime]*.resolutionStrategy {
             failOnVersionConflict()
         }
@@ -63,7 +59,6 @@ subprojects {
         testCompile 'org.truth0:truth:0.23'
         testCompile 'com.google.jimfs:jimfs:1.1'
         testCompile 'org.jooq:joor:0.9.6'
-        javancss 'org.codehaus.javancss:javancss:33.54'
     }
 
     test {
@@ -109,26 +104,6 @@ subprojects {
         from javadoc.destinationDir
     }
 
-    task javancss(dependsOn: 'classes') {
-        doLast {
-            ant {
-                logging.level = LogLevel.INFO
-                taskdef(name: 'javancss', classname: 'javancss.JavancssAntTask', classpath: configurations.javancss.asPath)
-                javancss(
-                        srcdir: 'src/main/java',
-                        abortOnFail: 'true',
-                        generateReport: 'true',
-                        packageMetrics: 'true',
-                        classMetrics: 'false',
-                        functionMetrics: 'false'
-                        // outputFile: reportName,
-                )
-            }
-        }
-    }
-
-    assemble.dependsOn javancss
-
     ///////// Publish Artifacts
     apply plugin: 'maven'
     apply plugin: 'signing'
@@ -146,34 +121,34 @@ subprojects {
 
     defaultTasks 'build'
 }
+//
+//project (':capsule') {
+//    dependencies {
+//        testCompile project(':capsule-util')
+//    }
+//
+//    jar {
+//        manifest {
+//            attributes('Main-Class'    : 'Capsule',
+//                       'Premain-Class' : 'Capsule')
+//        }
+//    }
+//
+//    javadoc {
+//        options.noDeprecated = true
+//        excludes = [ "capsule/**" ]
+//    }
+//}
 
-project (':capsule') {
-    dependencies {
-        testCompile project(':capsule-util')
-    }
-
-    jar {
-        manifest {
-            attributes('Main-Class'    : 'Capsule',
-                       'Premain-Class' : 'Capsule')
-        }
-    }
-
-    javadoc {
-        options.noDeprecated = true
-        excludes = [ "capsule/**" ]
-    }
-}
-
-project (':capsule-util') {
-    dependencies {
-        runtime project(':capsule')
-        compile files("${System.getProperty('java.home')}/../lib/tools.jar")
-    }
-
-    javadoc {
-        excludes = ["co/paralleluniverse/common/**",
-                    "co/paralleluniverse/filesystem/**"
-        ]
-    }
-}
+//project (':capsule-util') {
+//    dependencies {
+//        runtime project(':capsule')
+//        compile files("${System.getProperty('java.home')}/../lib/tools.jar")
+//    }
+//
+//    javadoc {
+//        excludes = ["co/paralleluniverse/common/**",
+//                    "co/paralleluniverse/filesystem/**"
+//        ]
+//    }
+//}
